<resources>
    <string name="app_name">Clads</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_in_browser">view in browser</string>
    <string name="hi_obioma">Hi Ijeoma, you are almost ready to start enjoying clads. Simply click the
        blue button below to verify your email address
    </string>
    <string name="hi_you_are_almost_there">Hi you are almost there to finish reseting your password please click on the reset button below</string>
    <string name="copyright_2020">copyright 2020.All rights reserved</string>
    <string name="email_sent_by_obioma">email sent by obioma</string>
    <string name="verify_email_address">Verify Email Address</string>
    <string name="reset_password">Reset Password</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login_continue">Login to continue</string>
    <string name="all_signup_with_google">SignIn with Google</string>
    <string name="all_email_address">Email Address</string>
    <string name="all_password">Password</string>
    <string name="all_forget_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="google_icon">Google icon</string>
    <string name="forgot_password_fragment_send_request_password_link">Send Request Password Link</string>
    <string name="all_reset_password">Reset Password</string>
    <string name="reset_password_fragment_new_password">New Password</string>
    <string name="reset_password_fragment_confirm_new_password">Confirm New Password</string>
    <string name="all_back_arrow">back_arrow</string>
    <string name="all_forgot_password">Forgot Password</string>
    <string name="all_remember_my_password">I can remember my password,</string>
    <string name="email_sign_up_fragment_create_an_account">Create an account</string>
    <string name="email_sign_up_fragment_lets_get_to_know_you">Let\'s get to know you</string>
    <string name="all_signup">Signup</string>
    <string name="all_have_an_account">Have an account?</string>
    <string name="all_login">Login</string>
    <string name="email_sign_up_fragment_choose_account_category">Choose account category</string>
    <string name="client">Client</string>
    <string name="weaver">Weaver</string>
    <string name="tailor">Tailor</string>
    <string name="all_confirm_password">Confirm Password</string>
    <string name="all_first_name">First Name</string>
    <string name="all_last_name">Last Name</string>
    <string name="all_other_name">Other Name</string>
    <string name="lorem_ipsum_ipsum_sum">Lorem Ipsum. Ipsum sum.</string>
    <string name="sign_up">sign up</string>
    <string name="Loading">Loading...</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="sign_up_with_phone_number">Sign up with phone number</string>
    <string name="signup_with_google">Signup with Google</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="login_caps">Login</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="clads_logo">clads logo</string>
    <string name="all_email_cant_be_empty">Email Can\'t Be Empty</string>
    <string name="all_invalid_email">Invalid Email</string>
    <string name="all_password_is_required">Password is Required</string>
    <string name="all_please_enter_first_name">Please Enter First Name</string>
    <string name="all_please_enter_last_name">Please Enter Last Name</string>
    <string name="all_please_enter_phone_number">Please Enter Phone Number</string>
    <string name="all_password_mismatch">Password Mismatch</string>
    <string name="all_select_account_type">Select Account Type</string>
    <string name="new_user_sign_up_for_free">New user? Sign Up for free</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_media">Media</string>
    <string name="clients">Clients</string>
    <string name="resources">Resources</string>
    <string name="subscription">Subscription</string>
    <string name="logout">Logout</string>
    <string name="login_status">LOGIN_STATUS</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ijeoma_ibukun_babangida">Ijeoma Ibukun Babangida</string>
    <string name="version_1_0">version 1.0</string>
    <string name="account">Account</string>
    <string name="security">Security</string>
    <string name="payment_method">Payment Method</string>
    <string name="specialty">Specialty</string>
    <string name="measurements">Measurements</string>
    <string name="delivery_addresses">Delivery Addresses</string>
    <string name="client_account">Client Account</string>
    <string name="add_client"> Add Client </string>
    <string name="native_measurement">Native Measurement</string>
    <string name="english_measurement">English Measurement</string>
    <string name="add_measurement">Add Measurement</string>
    <string name="all_first_initial">M</string>
    <string name="all_last_initial">O</string>
    <string name="all_male">Male</string>
    <string name="all_female">Female</string>
    <string name="all_gender">Gender</string>
    <string name="all_next">Next</string>
    <string name="all_phone_number">Phone Number</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="all_address">Address</string>
    <string name="all_lagos">Lagos</string>
    <string name="all_you_have_not_clients_yet">You have no clients yet</string>
    <string name="add_measurement_fragment_name">Name</string>
    <string name="add_measurement_fragment_add_measurement">Add measurement</string>
    <string name="all_save">Save</string>
    <string name="all_update">Update</string>
    <string name="add_measurement_fragment_add_button">Add</string>
    <string name="blank_text_view_item">Blank text view item</string>
    <string name="add_delivery_address">Add Delivery Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="enter_street_address">Enter Street Address</string>
    <string name="delivery_address_city">City</string>
    <string name="delivery_address_state">State</string>
    <string name="there_are_no_delivery_address">There are no delivery address for this client</string>
    <string name="add_address">Add Address</string>
    <string name="save_client">Save Client</string>
    <string name="add_address_fragment">Add address</string>
    <string name="edit_measurement">Edit measurement</string>
    <string-array name="Year">
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
    </string-array>
    <string-array name="states">
        <item>Abia</item>
        <item>Adamawa</item>
        <item>Akwa Ibom</item>
        <item>Anambra</item>
        <item>Bauchi</item>
        <item>Bayelsa</item>
        <item>Benue</item>
        <item>Borno</item>
        <item>Cross River</item>
        <item>Delta</item>
        <item>Ebonyi</item>
        <item>Edo</item>
        <item>Ekiti</item>
        <item>Enugu</item>
        <item>Gombe</item>
        <item>Imo</item>
        <item>Jigawa</item>
        <item>Kaduna</item>
        <item>Kano</item>
        <item>Katsina</item>
        <item>Kebbi</item>
        <item>Kogi</item>
        <item>Kwara</item>
        <item>Lagos</item>
        <item>Nassarawa</item>
        <item>Niger</item>
        <item>Ogun</item>
        <item>Ondo</item>
        <item>Osun</item>
        <item>Oyo</item>
        <item>Plateau</item>
        <item>Rivers</item>
        <item>Sokoto</item>
        <item>Taraba</item>
        <item>Yobe</item>
        <item>Zamfara</item>
        <item>FCT</item>
    </string-array>
    <string name="tag">Dialog tag</string>
    <string name="request_key_keyClicked">keyClicked</string>
    <string name="key_bundleKey">bundleKey</string>
    <string name="request_key_keyClicked2">keyClicked2</string>
    <string name="key_editedData">editedData</string>
    <string name="key_position">position</string>
    <string name="delete_measurement">Delete measurement!</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="do_you_want_to_delete_measurement">Do you want to delete the measurement ?</string>
    <string name="dialog_alert_confirmation_yes">Yes</string>
    <string name="dialog_alert_confirmation_cancle">Cancel</string>
    <string name="arm">Arm</string>
    <string name="leg">Leg</string>
    <string name="neck">Neck</string>
    <string name="waist">Waist</string>
    <string name="sholder">Sholder</string>
    <string name="elbow">Elbow</string>
    <string name="enter_the_delivery_address_validation">Please, enter the delivery address</string>
    <string name="enter_city_validation">Please, enter a city</string>
    <string name="enter_state_validation">Please, select a state</string>
    <string name="enter_name_validation">Please, enter name</string>
    <string name="enter_measurement_validation">Please, enter the measurement</string>
    <string name="there_are_no_measurements">There are no measurements for this client</string>
    <string name="payment_terms">Payment Terms</string>
    <string name="_100_deposit">100% Deposit</string>
    <string name="payment_options">Payment Options</string>
    <string name="vcash_bank_deposit_naira_paystack">VCash, Bank Deposit (Naira),PayStack</string>
    <string name="_50_deposit_and_50_balance_on_delivery">50% Deposit and 50% balance on delivery</string>
    <string name="_0_deposit_and_100_balance_on_delivery">0% Deposit and 100% balance on delivery</string>
    <string name="payoneer">Payoneer</string>
    <string name="vcash">VCash</string>
    <string name="cash">Cash</string>
    <string name="add_payment_terms">Add Payment Terms</string>
    <string name="text">Text</string>
    <string name="phone_number">Phone Number</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="bank_deposit_naira">Bank deposit (Naira)</string>
    <string name="bank_deposit_usd_gpb_eur">Bank deposit (USD: GPB: Eur)</string>
    <string name="verified_information">Verified Information</string>
    <string name="_0700000000000">0700000000000</string>
    <string name="password">Password</string>
    <string name="change_password">Change Password</string>
    <string name="tap_to_change_profile_picture">Tap to change picture</string>
    <string name="first_name">First name</string>
    <string name="ijeoma">Ijeoma</string>
    <string name="ibukun">Ibukun</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="legal_status">Legal Status</string>
    <string name="individual">Individual</string>
    <string name="delivery_lead_time">Delivery Lead Time</string>
    <string name="add_delivery_lead_time_name">Add Delivery Lead Time</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="months">Months</string>
    <string name="male">Male</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="coporate">Coporate</string>
</resources>