<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.decagonhq.clads.ui.profile.bottomnav.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/home_fragment">
        <action
            android:id="@+id/action_nav_home_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_media"
        android:name="com.decagonhq.clads.ui.profile.bottomnav.MediaFragment"
        android:label="@string/menu_media"
        tools:layout="@layout/media_fragment" />

    <fragment
        android:id="@+id/nav_messages"
        android:name="com.decagonhq.clads.ui.profile.bottomnav.MessagesFragment"
        android:label="@string/menu_messages"
        tools:layout="@layout/messages_fragment" />

    <fragment
        android:id="@+id/resourcesFragment"
        android:name="com.decagonhq.clads.ui.resource.ResourcesFragment"
        android:label="@string/resources"
        tools:layout="@layout/resources_fragment" />
    <fragment
        android:id="@+id/subscriptionFragment"
        android:name="com.decagonhq.clads.ui.subscription.SubscriptionFragment"
        android:label="@string/subscription"
        tools:layout="@layout/subscription_fragment" />
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.decagonhq.clads.ui.profile.editprofile.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/edit_profile_fragment" />
    <fragment
        android:id="@+id/addClientFragment"
        android:name="com.decagonhq.clads.ui.client.AddClientFragment"
        android:label="@string/add_client"
        tools:layout="@layout/add_client_fragment" />

    <fragment
        android:id="@+id/measurementsFragment"
        android:name="com.decagonhq.clads.ui.client.MeasurementsFragment"
        android:label="measurements_fragment"
        tools:layout="@layout/measurements_fragment" >
        <argument
            android:name="dress_measurement"
            app:argType="com.decagonhq.clads.model.DressMeasurementModel" />
    </fragment>
    <fragment
        android:id="@+id/deliveryAddressFragment"
        android:name="com.decagonhq.clads.ui.client.DeliveryAddressFragment"
        android:label="@string/add_client"
        tools:layout="@layout/delivery_address_fragment" >
        <argument
            android:name="delivery_address"
            app:argType="com.decagonhq.clads.model.DeliveryAddressModel"
            app:nullable="true"
            android:defaultValue="@null"/>
    </fragment>

    <fragment
        android:id="@+id/addAddressFragment"
        android:name="com.decagonhq.clads.ui.client.AddAddressFragment"
        android:label="@string/add_client"
        tools:layout="@layout/add_address_fragment" >
        <action
            android:id="@+id/action_addAddressFragment_to_deliveryAddressFragment"
            app:destination="@id/deliveryAddressFragment" />
    </fragment>

    <fragment
        android:id="@+id/paymentMethodFragment"
        android:name="com.decagonhq.clads.ui.profile.editprofile.PaymentMethodFragment"
        android:label="payment_method_fragment"
        tools:layout="@layout/payment_method_fragment" />

    <fragment
        android:id="@+id/clientFragment"
        android:name="com.decagonhq.clads.ui.client.ClientFragment"
        android:label="@string/client"
        tools:layout="@layout/client_fragment">
        <action
            android:id="@+id/action_clientFragment_to_addClientFragment"
            app:destination="@id/addClientFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>

</navigation>