<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.profile.editprofile.AccountGenderDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/account_gender_dialog_fragment_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_34dp"
            android:text="@string/gender"
            android:textColor="@color/navy_blue"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/account_gender_dialog_fragment_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_18dp"
            android:layout_marginTop="@dimen/margin_22dp"
            android:checkedButton="@+id/account_gender_dialog_fragment_female_radio_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_gender_dialog_fragment_text_view">

            <RadioButton
                android:id="@+id/account_gender_dialog_fragment_female_radio_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:buttonTint="@color/deep_sky_blue"
                android:fontFamily="@font/poppins"
                android:text="@string/female"
                android:textColor="@color/navy_blue"
                android:textSize="@dimen/text_size_12sp" />

            <RadioButton
                android:id="@+id/account_gender_dialog_fragment_male_radio_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:buttonTint="@color/deep_sky_blue"
                android:fontFamily="@font/poppins"
                android:text="@string/male"
                android:textColor="@color/navy_blue"
                android:textSize="@dimen/text_size_12sp" />


        </RadioGroup>

        <TextView
            android:id="@+id/account_gender_dialog_fragment_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_26dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/account_gender_dialog_fragment_ok_button"
            app:layout_constraintTop_toBottomOf="@+id/account_gender_dialog_fragment_radio_group" />

        <TextView
            android:id="@+id/account_gender_dialog_fragment_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_20dp"
            android:text="@string/ok"
            android:textColor="@color/deep_sky_blue"
            app:layout_constraintBaseline_toBaselineOf="@+id/account_gender_dialog_fragment_cancel_button"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>