<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.profile.editprofile.SpecialtyDeliveryTimeDialogFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/specialty_delivery_time_dialog_fragment_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_34dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/delivery_lead_time"
        android:textColor="@color/navy_blue"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/specialty_delivery_time_dialog_fragment_delivery_time_edit_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_18dp"
        app:boxBackgroundColor="@color/white"
        app:counterEnabled="true"
        app:counterMaxLength="100"
        app:helperText="@string/add_delivery_lead_time_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specialty_delivery_time_dialog_fragment_title_text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/specialty_delivery_time_dialog_fragment_delivery_time_edit_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/navy_blue" />
    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
        android:id="@+id/specialty_delivery_time_dialog_fragment_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12dp"
        android:checkedButton="@+id/specialty_delivery_time_dialog_fragment_weeks_radio_button"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specialty_delivery_time_dialog_fragment_delivery_time_edit_text_input_layout">

        <RadioButton
            android:id="@+id/specialty_delivery_time_dialog_fragment_days_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/deep_sky_blue"
            android:fontFamily="@font/poppins"
            android:paddingHorizontal="@dimen/padding_10dp"
            android:text="@string/days"
            android:textColor="@color/navy_blue"
            android:textSize="@dimen/text_size_12sp" />

        <RadioButton
            android:id="@+id/specialty_delivery_time_dialog_fragment_weeks_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/deep_sky_blue"
            android:fontFamily="@font/poppins"
            android:paddingHorizontal="@dimen/padding_10dp"
            android:text="@string/weeks"
            android:textColor="@color/navy_blue"
            android:textSize="@dimen/text_size_12sp" />

        <RadioButton
            android:id="@+id/specialty_delivery_time_dialog_fragment_months_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:buttonTint="@color/deep_sky_blue"
            android:fontFamily="@font/poppins"
            android:paddingHorizontal="@dimen/padding_10dp"
            android:text="@string/months"
            android:textColor="@color/navy_blue"
            android:textSize="@dimen/text_size_12sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/specialty_delivery_time_dialog_fragment_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/poppins"
        android:text="@string/cancel"
        android:textColor="@color/navy_blue"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/specialty_delivery_time_dialog_fragment_ok_button"
        app:layout_constraintEnd_toStartOf="@+id/specialty_delivery_time_dialog_fragment_ok_button" />

    <TextView
        android:id="@+id/specialty_delivery_time_dialog_fragment_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_18dp"
        android:layout_marginVertical="@dimen/margin_20dp"
        android:backgroundTint="@android:color/white"
        android:fontFamily="@font/poppins"
        android:paddingHorizontal="@dimen/padding_20dp"
        android:text="@string/ok"
        android:textColor="@color/navy_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specialty_delivery_time_dialog_fragment_radio_group" />
</androidx.constraintlayout.widget.ConstraintLayout>