<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_18dp"
    android:layout_marginTop="@dimen/margin_8dp"
    android:background="@drawable/fragment_client_list_screen_recycler_drawable_border"
    android:elevation="@dimen/margin_10dp"
    android:paddingVertical="@dimen/padding_11dp">

    <LinearLayout
        android:id="@+id/client_home_image_profile_color_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="11dp"
        android:background="@drawable/client_list_round_image_background"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/client_home_list_recycler_look_client_first_name_initial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins"
            android:gravity="center_horizontal"
            android:text="@string/all_first_initial"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/client_home_list_recycler_look_client_last_name_initials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins"
            android:gravity="center_horizontal"
            android:text="@string/all_last_initial"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/client_home_list_first_name"
        style="@style/client_list_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_12dp"
        android:text="@string/all_first_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/client_home_image_profile_color_background"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/client_home_list_last_name"
        style="@style/client_list_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/all_last_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/client_home_list_first_name"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/client_home_list_recycler_look_location_pointer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/client_home_list_recycler_look_client_location"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/client_screen_location_pin" />

    <TextView
        android:id="@+id/client_home_list_recycler_look_client_location"
        style="@style/client_list_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:text="@string/all_lagos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/client_home_list_recycler_look_location_pointer"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>